--- a/.github/workflows/code-analyze.yml
+++ b/.github/workflows/code-analyze.yml
@@ -2,8 +2,8 @@
 name: Salesforce Code Quality
 
 on:
-  workflow_dispatch
-  workflow_call
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
   default:
