--- a/.github/workflows/code-analyze.yml
+++ b/.github/workflows/code-analyze.yml
@@ -12,12 +12,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install sfdx
+      - name: Setup SFDX
+        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
-      - name: Install Salesforce Code Analyzer
-        run: |
           sfdx plugins:install @salesforce/sfdx-scanner
       - name: SF Code Analyzer - PMD
         run: |
@@ -29,13 +28,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install sfdx
+      - name: Setup SFDX
+        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
-      - name: Install Salesforce Code Analyzer
-        run: |
-          sfdx plugins:install @salesforce/sfdx-scanner    
+          sfdx plugins:install @salesforce/sfdx-scanner   
       - name: SF Code Analyzer - RetireJS
         run: |
           sfdx scanner:run --engine "retire-js" --target force-app --format table --severity-threshold 3 
@@ -46,13 +44,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install sfdx
+      - name: Setup SFDX
+        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
-      - name: Install Salesforce Code Analyzer
-        run: |
-          sfdx plugins:install @salesforce/sfdx-scanner    
+          sfdx plugins:install @salesforce/sfdx-scanner   
       - name: SF Code Analyzer - Data Flow Analysis
         run: |
           sfdx scanner:run:dfa --target force-app --projectdir force-app --format table --severity-threshold 3
@@ -63,12 +60,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install sfdx
+      - name: Setup SFDX
+        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
-      - name: Install Salesforce Code Analyzer
-        run: |
           sfdx plugins:install @salesforce/sfdx-scanner
       - name: SF Code Analyzer - ESLint
         run: |
