--- a/.github/workflows/code-analyze.yml
+++ b/.github/workflows/code-analyze.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v3
       - name: Setup SFDX
-        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
@@ -28,12 +28,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v3
       - name: Setup SFDX
-        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
-          sfdx plugins:install @salesforce/sfdx-scanner   
+          sfdx plugins:install @salesforce/sfdx-scanner 
       - name: SF Code Analyzer - RetireJS
         run: |
           sfdx scanner:run --engine "retire-js" --target force-app --format table --severity-threshold 3 
@@ -44,12 +44,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v3
       - name: Setup SFDX
-        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
-          sfdx plugins:install @salesforce/sfdx-scanner   
+          sfdx plugins:install @salesforce/sfdx-scanner 
       - name: SF Code Analyzer - Data Flow Analysis
         run: |
           sfdx scanner:run:dfa --target force-app --projectdir force-app --format table --severity-threshold 3
@@ -60,8 +60,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v3
       - name: Setup SFDX
-        uses: actions/setup-node@v3
         run: |
           npm install --global sfdx-cli
           sfdx --version
